--- a/src/style.css
+++ b/src/style.css
@@ -146,6 +146,10 @@ span.correct{
     font-size:25px
 }
 
+span.allRight{
+    color: rgb(11, 212, 11);
+}
+
 .keyboard{
     /* border: 1px solid orange; */
     width:95%;
